# ai_ocr_read_nan

./: BACKEND_CONFIG_GUIDE.md  BUGFIX_PASSPHRASE.md  DATA_PATH_AUTO_NEGOTIATION.md  DATA_PATH_CONNECTION_STRATEGY.md  DATA_PATH_CORE_ISSUE.md  DATA_PATH_IMPLEMENTATION_SUMMARY.md  DATA_PATH_USAGE.md  GIT_COMMIT_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  NANManager.java  PERMISSIONS_GUIDE.md  QUICK_START.md  README.md  google_guide.md  nan_data_link.md  pubspec.yaml  updateforndl.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/ai_ocr_read/: DataPathManager.kt  MainActivity.kt  NanManager.kt
android/app/src/main/res/xml/: network_security_config.xml
assets/: reply1.md  reply2.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: camera_capture_page.dart  client_page.dart  main.dart  settings_page.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
ocr_ai_backend/: .env  .env.example  README.md  VLM_API_README.md  guide.md  main.py  pyproject.toml  test_vlm.py
ocr_ai_backend/ocr_ai_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
